--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,6 +10,6 @@ jobs:
     steps:
       - name: build
         run: |
-          echo ls
+          ls > echo
           cd webapp
           docker image build -t webapp:$VERSION .
