--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,4 +15,4 @@ jobs:
         run: |
           ls
           cd webapp
-          docker image build -t $DOCKERHUB_USERID/webapp:$VERSION .
+          docker image build -t ${{secrets.DOCKERHUB_USERID}}/webapp:$VERSION .
