--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,10 @@ jobs:
           cd webapp
           docker image build -t ${{secrets.DOCKERHUB_USERID}}/webapp:$VERSION .
           docker image build -t ${{secrets.DOCKERHUB_USERID}}/webapp:latest .
-          echo .
+          echo.
+          echo Docker login
+          echo ${{secrets.DOCKERHUB_PWD}} | docker login -u ${{secrets.DOCKERHUB_USERID}}
+          echo.
           echo push the image on dockerhub
           docker image push ${{secrets.DOCKERHUB_USERID}}/webapp:$VERSION
           docker image push ${{secrets.DOCKERHUB_USERID}}/webapp:latest
