--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,12 +20,12 @@ jobs:
           echo ---
           echo TODO echo docker.pkg.github.com
           echo ---
-          echo Canister login
-          echo ${{secrets.CANISTER_PWD}} | docker login -u deploy+${{secrets.CANISTER_USERID}} cloud.canister.io:5000          
+          echo Canister login & Push
+          echo ${{secrets.CANISTER_PWD}} | docker login -u deploy+${{secrets.CANISTER_USERID}} cloud.canister.io:5000 --password-stdin
+          docker image push ${{secrets.DOCKERHUB_USERID}}/webapp:$VERSION cloud.canister.io:5000  
+          docker image push ${{secrets.DOCKERHUB_USERID}}/webapp:latest cloud.canister.io:5000  
           echo ---
-          echo Docker login
+          echo Docker login & Push
           echo ${{secrets.DOCKERHUB_PWD}} | docker login -u ${{secrets.DOCKERHUB_USERID}} --password-stdin
-          echo ---
-          echo push the image on dockerhub
           docker image push ${{secrets.DOCKERHUB_USERID}}/webapp:$VERSION
           docker image push ${{secrets.DOCKERHUB_USERID}}/webapp:latest
