--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,12 +20,17 @@ jobs:
           echo ---
           echo TODO echo docker.pkg.github.com
           echo ---
-          echo Canister login and Push
-          echo ${{secrets.CANISTER_PWD}} | docker login -u deploy+${{secrets.CANISTER_USERID}} cloud.canister.io:5000 --password-stdin
-          docker image push ${{secrets.DOCKERHUB_USERID}}/webapp:$VERSION 
-          docker image push ${{secrets.DOCKERHUB_USERID}}/webapp:latest 
-          echo ---
           #echo Docker login and Push
           #echo ${{secrets.DOCKERHUB_PWD}} | docker login -u ${{secrets.DOCKERHUB_USERID}} --password-stdin
           #docker image push ${{secrets.DOCKERHUB_USERID}}/webapp:$VERSION
           #docker image push ${{secrets.DOCKERHUB_USERID}}/webapp:latest
+          echo ---
+          echo Canister login and Push
+          echo re-tag the images 
+          docker image tag ${{secrets.DOCKERHUB_USERID}}/webapp:$VERSION cloud.canister.io:5000/${{secrets.DOCKERHUB_USERID}}/webapp:$VERSION
+          docker image tag ${{secrets.DOCKERHUB_USERID}}/webapp:latest cloud.canister.io:5000/${{secrets.DOCKERHUB_USERID}}/webapp:latest
+          echo ${{secrets.CANISTER_PWD}} | docker login -u deploy+${{secrets.CANISTER_USERID}} cloud.canister.io:5000 --password-stdin          
+          docker image push cloud.canister.io:5000/${{secrets.CANISTER_USERID}}/webapp:$VERSION 
+          docker image push cloud.canister.io:5000/${{secrets.CANISTER_USERID}}/webapp:latest 
+          echo ---
+
