--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,7 +4,7 @@ on: push
 env:  
   VERSION: 1.0.${{github.run_number}}
   CANISTER_URL: cloud.canister.io:5000
-  REPO: test-1
+  REPO: test-webapp
 
 jobs:
   create_image:
@@ -17,21 +17,21 @@ jobs:
         run: |
           echo build the image using the Dockerfile in webapp folder
           cd webapp
-          docker image build -t webapp:$VERSION .
-          docker image build -t webapp:latest .
+          docker image build -t $REPO:$VERSION .
+          docker image build -t $REPO:latest .
           echo ---
           echo TODO echo docker.pkg.github.com
           echo ---
           #echo Docker login and Push
           #echo ${{secrets.DOCKERHUB_PWD}} | docker login -u ${{secrets.DOCKERHUB_USERID}} --password-stdin
-          #docker image push ${{secrets.DOCKERHUB_USERID}}/webapp:$VERSION
-          #docker image push ${{secrets.DOCKERHUB_USERID}}/webapp:latest
+          #docker image push ${{secrets.DOCKERHUB_USERID}}/$REPO:$VERSION
+          #docker image push ${{secrets.DOCKERHUB_USERID}}/$REPO:latest
           echo ---
           echo Canister login and Push
           echo re-tag the images 
-          docker image tag webapp:$VERSION $CANISTER_URL/${{secrets.CANISTER_USERID}}/$REPO/webapp:$VERSION
-          docker image tag webapp:latest   $CANISTER_URL/${{secrets.CANISTER_USERID}}/$REPO/webapp:latest
+          docker image tag $REPO:$VERSION $CANISTER_URL/${{secrets.CANISTER_USERID}}/$REPO:$VERSION
+          docker image tag $REPO:latest   $CANISTER_URL/${{secrets.CANISTER_USERID}}/$REPO:latest
           echo ${{secrets.CANISTER_PWD}} | docker login -u deploy+${{secrets.CANISTER_USERID}} $CANISTER_URL --password-stdin          
-          docker image push $CANISTER_URL/${{secrets.CANISTER_USERID}}/$REPO/webapp:$VERSION 
-          docker image push $CANISTER_URL/${{secrets.CANISTER_USERID}}/$REPO/webapp:latest
+          docker image push $CANISTER_URL/${{secrets.CANISTER_USERID}}/$REPO:$VERSION 
+          docker image push $CANISTER_URL/${{secrets.CANISTER_USERID}}/$REPO:latest
           echo ---
