--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,8 +31,8 @@ jobs:
           echo re-tag the images 
           docker image tag $REPO:$VERSION $CANISTER_URL/${{secrets.CANISTER_USERID}}/$REPO:$VERSION
           docker image tag $REPO:latest   $CANISTER_URL/${{secrets.CANISTER_USERID}}/$REPO:latest
-          echo ${{secrets.CANISTER_PWD}} | docker login -u deploy+${{secrets.CANISTER_USERID}} $CANISTER_URL --password-stdin          
-          docker image push $CANISTER_URL/${{secrets.CANISTER_USERID}}/$REPO:$VERSION 
-          docker image push $CANISTER_URL/${{secrets.CANISTER_USERID}}/$REPO:latest
+          echo ${{secrets.CANISTER_PWD}} | docker login -u deploy+${{secrets.CANISTER_USERID}} cloud.canister.io:5000 --password-stdin          
+          #docker image push $CANISTER_URL/${{secrets.CANISTER_USERID}}/$REPO:$VERSION 
+          #docker image push $CANISTER_URL/${{secrets.CANISTER_USERID}}/$REPO:latest
           echo ---
           
