--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,6 +4,7 @@ on: push
 env:  
   VERSION: 1.0.${{github.run_number}}
   CANISTER_URL: cloud.canister.io:5000
+  CR_URL: c8n.io
   REPO: test-webapp
 
 jobs:
@@ -27,11 +28,19 @@ jobs:
           #docker image push ${{secrets.DOCKERHUB_USERID}}/$REPO:$VERSION
           #docker image push ${{secrets.DOCKERHUB_USERID}}/$REPO:latest
           echo ---
-          echo Canister login and Push
-          echo re-tag the images 
-          docker image tag $REPO:$VERSION $CANISTER_URL/${{secrets.CANISTER_USERID}}/$REPO:$VERSION
-          docker image tag $REPO:latest   $CANISTER_URL/${{secrets.CANISTER_USERID}}/$REPO:latest
-          echo ${{secrets.CANISTER_PWD}} | docker login -u deploy+${{secrets.CANISTER_USERID}} $CANISTER_URL --password-stdin          
-          docker image push $CANISTER_URL/${{secrets.CANISTER_USERID}}/$REPO:$VERSION 
-          docker image push $CANISTER_URL/${{secrets.CANISTER_USERID}}/$REPO:latest
+          #echo Canister login and Push
+          #echo re-tag the images 
+          #docker image tag $REPO:$VERSION $CANISTER_URL/${{secrets.CANISTER_USERID}}/$REPO:$VERSION
+          #docker image tag $REPO:latest   $CANISTER_URL/${{secrets.CANISTER_USERID}}/$REPO:latest
+          #echo ${{secrets.CANISTER_PWD}} | docker login -u deploy+${{secrets.CANISTER_USERID}} $CANISTER_URL --password-stdin          
+          #docker image push $CANISTER_URL/${{secrets.CANISTER_USERID}}/$REPO:$VERSION 
+          #docker image push $CANISTER_URL/${{secrets.CANISTER_USERID}}/$REPO:latest
+          echo ---
+          #echo Container Registry Login and Push
+          #echo re-tag the images 
+          #docker image tag $REPO:$VERSION $CR_URL/${{secrets.CR_USERID}}/$REPO:$VERSION
+          #docker image tag $REPO:latest   $CR_URL/${{secrets.CR_USERID}}/$REPO:latest
+          #echo "${{secrets.CR_PWD}}"" | docker login -u ${{secrets.CR_USERID}} $CR_URL --password-stdin          
+          #docker image push $CR_URL/${{secrets.CR_USERID}}/$REPO:$VERSION 
+          #docker image push $CR_URL/${{secrets.CR_USERID}}/$REPO:latest
           echo ---
