--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,8 +41,8 @@ jobs:
           echo re-tag the images 
           docker image tag $REPO:$VERSION $CR_URL/${{secrets.CR_USERID}}/$REPO:$VERSION
           docker image tag $REPO:latest   $CR_URL/${{secrets.CR_USERID}}/$REPO:latest
-          #echo ${{secrets.CR_PWD}} | docker login -u ${{secrets.CR_USERID}} $CR_URL --password-stdin          
-          docker login -u ${{secrets.CR_USERID}} -p ${{secrets.CR_PWD}} $CR_URL  
+          echo ${{secrets.CR_PWD}}| docker login -u ${{secrets.CR_USERID}} $CR_URL --password-stdin          
+          #docker login -u ${{secrets.CR_USERID}} -p ${{secrets.CR_PWD}} $CR_URL  
           docker image push $CR_URL/${{secrets.CR_USERID}}/$REPO:$VERSION 
           docker image push $CR_URL/${{secrets.CR_USERID}}/$REPO:latest
           echo ---
