--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,8 +34,8 @@ jobs:
           docker image tag $REPO:$VERSION $CANISTER_URL/${{secrets.CANISTER_USERID}}/$REPO:$VERSION
           docker image tag $REPO:latest   $CANISTER_URL/${{secrets.CANISTER_USERID}}/$REPO:latest
           echo ${{secrets.CANISTER_PWD}}| docker login -u ${{secrets.CANISTER_USERID}} $CANISTER_URL --password-stdin          
-          #docker image push $CANISTER_URL/${{secrets.CANISTER_USERID}}/$REPO:$VERSION 
-          #docker image push $CANISTER_URL/${{secrets.CANISTER_USERID}}/$REPO:latest
+          docker image push $CANISTER_URL/${{secrets.CANISTER_USERID}}/$REPO:$VERSION 
+          docker image push $CANISTER_URL/${{secrets.CANISTER_USERID}}/$REPO:latest
           echo ---
           
           echo Container Registry Login and Push
