--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,8 +18,7 @@ jobs:
         run: |
           echo build the image using the Dockerfile in webapp folder
           cd webapp
-          docker image build -t $REPO:$VERSION .
-          docker image build -t $REPO:latest .
+          docker image build -t $REPO:0 .
           echo ---
           echo TODO echo docker.pkg.github.com
           echo ---
@@ -31,8 +30,8 @@ jobs:
           
           echo Canister login and Push
           echo re-tag the images 
-          docker image tag $REPO:$VERSION $CANISTER_URL/${{secrets.CANISTER_USERID}}/$REPO:$VERSION
-          docker image tag $REPO:latest   $CANISTER_URL/${{secrets.CANISTER_USERID}}/$REPO:latest
+          docker image tag $REPO:0 $CANISTER_URL/${{secrets.CANISTER_USERID}}/$REPO:$VERSION
+          docker image tag $REPO:0 $CANISTER_URL/${{secrets.CANISTER_USERID}}/$REPO:latest
           echo ${{secrets.CANISTER_PWD}}| docker login -u ${{secrets.CANISTER_USERID}} $CANISTER_URL --password-stdin          
           docker image push $CANISTER_URL/${{secrets.CANISTER_USERID}}/$REPO:$VERSION 
           docker image push $CANISTER_URL/${{secrets.CANISTER_USERID}}/$REPO:latest
@@ -40,8 +39,8 @@ jobs:
           
           echo Container Registry Login and Push
           echo re-tag the images 
-          docker image tag $REPO:$VERSION $CR_URL/${{secrets.CR_USERID}}/$REPO:$VERSION
-          docker image tag $REPO:latest   $CR_URL/${{secrets.CR_USERID}}/$REPO:latest
+          docker image tag $REPO:0 $CR_URL/${{secrets.CR_USERID}}/$REPO:$VERSION
+          docker image tag $REPO:0 $CR_URL/${{secrets.CR_USERID}}/$REPO:latest
           echo ${{secrets.CR_PWD}}| docker login -u ${{secrets.CR_USERID}} $CR_URL --password-stdin          
           docker image push $CR_URL/${{secrets.CR_USERID}}/$REPO:$VERSION 
           docker image push $CR_URL/${{secrets.CR_USERID}}/$REPO:latest
