--- a/webapp/Dockerfile.2
+++ b/webapp/Dockerfile.2
@@ -1,9 +1,6 @@
 # Linux x64 witin Node (and nothing else!)
 FROM node:current-alpine as BUILDER
 
-# Create directory in container image for app code
-#RUN mkdir -p /app
-
 # Copy the app code (.) to the app directory
 COPY . /app
 
@@ -23,15 +20,14 @@ RUN npm prune --production
 RUN npm ci --only=production
 
 FROM node:current-alpine as MAIN
-COPY --from=BUILD /usr/src/app /usr/src/app
+COPY --from=BUILDER /app /app
 
-EXPOSE 8005
-
-USER nextjs
-
-EXPOSE 3000
+#USER nextjs
 
 ENV PORT 3000
+EXPOSE 3000
 
 # Command for container to execute
-ENTRYPOINT [ "node", "/usr/src/app/build/app.js" ]
+ENTRYPOINT [ "node", "/app/build/app.js" ]
+
+# docker run -d -p 8080:3000 --name webapp.1 test:1.1
