--- a/Radix Engine Simulator/Dockerfile rust.v1
+++ b/Radix Engine Simulator/Dockerfile rust.v1
@@ -1,5 +1,3 @@
-# https://stackoverflow.com/questions/49676490/when-installing-rust-toolchain-in-docker-bash-source-command-doesnt-work
-
 FROM ubuntu:22.04 as Base
 
 # Get default packages and some useful tools.
@@ -25,21 +23,13 @@ RUN rustup update stable
 # Add WebAssembly target
 RUN rustup target add wasm32-unknown-unknown
 
-# Prepare the Radix Engine Simulator
-# https://docs.radixdlt.com/main/scrypto/getting-started/install-scrypto.html
-RUN git clone https://github.com/radixdlt/radixdlt-scrypto.git \
-    && cd radixdlt-scrypto \
-    && cargo install --path ./simulator
-
 
 FROM ubuntu:22.04 as Final
 
-#WORKDIR /app
-#COPY --from=Base /radixdlt-scrypto/simulator ./simulator
 COPY --from=Base /root/.cargo /root/.cargo
 COPY --from=Base /root/.rustup /root/.rustup
-#COPY . .
 
 ENV PATH="/root/.cargo/bin:${PATH}"
 
-RUN rustup target add wasm32-unknown-unknown
+# RUN rustup target add wasm32-unknown-unknown
+
