--- a/Radix Engine Simulator/Dockerfile.v2
+++ b/Radix Engine Simulator/Dockerfile.v2
@@ -29,4 +29,7 @@ RUN git clone https://github.com/radixdlt/radixdlt-scrypto.git \
     && cd radixdlt-scrypto \
     && cargo install --path ./simulator
 
-RUN rmdir radixdlt-scrypto
+RUN rm -r radixdlt-scrypto
+
+
+# 3.5 GB IMAGE !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
