--- a/webapp/package.json
+++ b/webapp/package.json
@@ -5,7 +5,7 @@
   "license": "UNLICENSED",
   "scripts": {
     "start": "nodemon app.ts",
-    "test": "echo \"***Test not cionfigured yet***\" && exit 1",
+    "test": "echo \"***Test not configured yet***\" && exit 1",
     "build": "tsc --project ./"
   },
   "homepage": "https://github.com/alex-piccione/learning.docker#readme",
