--- a/examples/api service/Dockerfile
+++ b/examples/api service/Dockerfile
@@ -3,7 +3,7 @@ FROM node:18-alpine AS dependencies
 
 WORKDIR /app
 COPY package.json package-lock.json ./
-RUN npm install --frozen-lockfile
+RUN npm install --production --frozen-lockfile
 
 FROM node:18-alpine AS builder
 WORKDIR /app
