--- a/examples/api service/package.json
+++ b/examples/api service/package.json
@@ -12,5 +12,8 @@
   "type": "module",
   "dependencies": {
     "express": "^4.18.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.19"
   }
 }
