--- a/examples/api service/package.json
+++ b/examples/api service/package.json
@@ -2,16 +2,18 @@
   "name": "api-service",
   "version": "1.0.0",
   "description": "API service",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "start": "npm install && node src/index.js ",
+    "start": "npm install && nodemom src/index.js",
+    "start:node": "npm install && node src/index.js ",
     "test": "test"
   },
   "author": "",
   "license": "ISC",
   "type": "module",
   "dependencies": {
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "mongodb": "^4.8.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
