--- a/examples/api service/package.json
+++ b/examples/api service/package.json
@@ -4,7 +4,7 @@
   "description": "API service",
   "main": "src/index.js",
   "scripts": {
-    "start": "npm install && nodemom src/index.js",
+    "start": "nodemon src/index.js",
     "start:node": "npm install && node src/index.js ",
     "test": "test"
   },
