--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,7 +18,7 @@ jobs:
         run: |
           echo build the image using the Dockerfile in webapp folder
           cd webapp
-          docker image build -t $REPO:0 . -f Dockerfile.3
+          docker image build -t $REPO:0 -f devops/Dockerfile.3 .
           echo ---
           
           echo TODO echo docker.pkg.github.com
@@ -30,7 +30,7 @@ jobs:
           echo ---
           
           echo Canister login and Push
-          echo ${{secrets.CANISTER_PWD}}| docker login -u ${{secrets.CANISTER_USERID}} $CANISTER_URL --password-stdin   
+          echo ${{secrets.CANISTER_PWD}} | docker login -u ${{secrets.CANISTER_USERID}} $CANISTER_URL --password-stdin   
           docker image tag $REPO:0 $CANISTER_URL/${{secrets.CANISTER_USERID}}/$REPO:$VERSION
           docker image tag $REPO:0 $CANISTER_URL/${{secrets.CANISTER_USERID}}/$REPO:latest                 
           docker image push $CANISTER_URL/${{secrets.CANISTER_USERID}}/$REPO:$VERSION 
@@ -38,7 +38,7 @@ jobs:
           echo ---
           
           echo Container Registry Login and Push
-          echo ${{secrets.CR_PWD}}| docker login -u ${{secrets.CR_USERID}} $CR_URL --password-stdin          
+          echo ${{secrets.CR_PWD}} | docker login -u ${{secrets.CR_USERID}} $CR_URL --password-stdin          
           docker image tag $REPO:0 $CR_URL/${{secrets.CR_USERID}}/$REPO:$VERSION
           docker image tag $REPO:0 $CR_URL/${{secrets.CR_USERID}}/$REPO:latest          
           docker image push $CR_URL/${{secrets.CR_USERID}}/$REPO:$VERSION 
