--- a/.github/workflows/deploy api-service test image.yml
+++ b/.github/workflows/deploy api-service test image.yml
@@ -17,7 +17,7 @@ jobs:
       - name: build
         run: |
           echo build the image using the Dockerfile in examples/api-service folder
-          docker image build -t $REPO/$IMAGE:$VERSION -f "./examples/api service/Dockerfile" "./examples/api service"
+          docker image build -t $IMAGE:0 -f "./examples/api service/Dockerfile" "./examples/api service"
           echo ---
       - name: publish
         run: |
@@ -29,12 +29,12 @@ jobs:
           #docker image push ${{secrets.DOCKERHUB_USERID}}/$REPO:latest
           #echo ---
 
-          #echo DockerHub login and Push
+          echo DockerHub login and Push
           #echo ${{secrets.DOCKERHUB_PWD}} | docker login -u ${{secrets.DOCKERHUB_USERID}} $DOCKERHUB_URL --password-stdin   
           echo ${{secrets.DOCKERHUB_PWD}} | docker login -u ${{secrets.DOCKERHUB_USERID}} --password-stdin   
-          #docker image tag $REPO:0 $CANISTER_URL/${{secrets.CANISTER_USERID}}/$REPO:$VERSION
+          docker image tag $IMAGE:0 $REPO/$IMAGE:$VERSION
           #docker image tag $REPO:0 $CANISTER_URL/${{secrets.CANISTER_USERID}}/$REPO:latest                 
-          #docker image push $CANISTER_URL/${{secrets.CANISTER_USERID}}/$REPO:$VERSION 
+          docker image push $REPO/$IMAGE:$VERSION 
           #docker image push $CANISTER_URL/${{secrets.CANISTER_USERID}}/$REPO:latest
           #echo ---
 
