--- a/.github/workflows/deploy api-service test image.yml
+++ b/.github/workflows/deploy api-service test image.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
     
       - name: build
         run: |
@@ -33,10 +33,10 @@ jobs:
           #echo ${{secrets.DOCKERHUB_PWD}} | docker login -u ${{secrets.DOCKERHUB_USERID}} $DOCKERHUB_URL --password-stdin   
           echo ${{secrets.DOCKERHUB_PWD}} | docker login -u ${{secrets.DOCKERHUB_USERID}} --password-stdin   
           docker image tag $IMAGE:0 $REPO/$IMAGE:$VERSION
-          #docker image tag $REPO:0 $CANISTER_URL/${{secrets.CANISTER_USERID}}/$REPO:latest                 
+          docker image tag $REPO:0 $REPO/$IMAGE:latest               
           docker image push $REPO/$IMAGE:$VERSION 
-          #docker image push $CANISTER_URL/${{secrets.CANISTER_USERID}}/$REPO:latest
-          #echo ---
+          docker image push $REPO/$IMAGE:latest
+          echo ---
 
   publish_image:
     needs: create_image
@@ -46,19 +46,11 @@ jobs:
     steps:
       - name: publish
         run: |
-          #echo TODO echo docker.pkg.github.com
-          #echo ---
-          #echo Docker login and Push
-          #echo ${{secrets.DOCKERHUB_PWD}} | docker login -u ${{secrets.DOCKERHUB_USERID}} --password-stdin
-          #docker image push ${{secrets.DOCKERHUB_USERID}}/$REPO:$VERSION
-          #docker image push ${{secrets.DOCKERHUB_USERID}}/$REPO:latest
-          #echo ---
-
-          #echo DockerHub login and Push
+          echo DockerHub login and Push
           #echo ${{secrets.DOCKERHUB_PWD}} | docker login -u ${{secrets.DOCKERHUB_USERID}} $DOCKERHUB_URL --password-stdin   
           echo ${{secrets.DOCKERHUB_PWD}} | docker login -u ${{secrets.DOCKERHUB_USERID}} --password-stdin   
-          #docker image tag $REPO:0 $CANISTER_URL/${{secrets.CANISTER_USERID}}/$REPO:$VERSION
-          #docker image tag $REPO:0 $CANISTER_URL/${{secrets.CANISTER_USERID}}/$REPO:latest                 
-          #docker image push $CANISTER_URL/${{secrets.CANISTER_USERID}}/$REPO:$VERSION 
-          #docker image push $CANISTER_URL/${{secrets.CANISTER_USERID}}/$REPO:latest
-          #echo ---
+          docker image tag $IMAGE:0 $REPO/$IMAGE:$VERSION
+          docker image tag $REPO:0 $REPO/$IMAGE:latest               
+          docker image push $REPO/$IMAGE:$VERSION 
+          docker image push $REPO/$IMAGE:latest
+          echo ---
