--- a/examples/api service/Dockerfile
+++ b/examples/api service/Dockerfile
@@ -5,7 +5,7 @@ WORKDIR /app
 COPY package.json package-lock.json ./
 RUN npm install --omit=dev --frozen-lockfile
 
-FROM node:18-alpine AS builder
+FROM node:18-alpine AS runner
 WORKDIR /app
 COPY --from=dependencies /app/node_modules ./node_modules
 COPY package.json ./package.json
