--- a/.github/workflows/deploy api-service test image.yml
+++ b/.github/workflows/deploy api-service test image.yml
@@ -3,7 +3,7 @@ on: push
 
 env:    
   REPO: ${{secrets.DOCKERHUB_USERID}}
-  IMAGE: test-api-server
+  IMAGE: test-api-service
   VERSION: 2.2.${{github.run_number}}
 
 jobs:
@@ -21,7 +21,7 @@ jobs:
           echo ---
       - name: publish
         run: |
-          echo DockerHub login and Push image $IMAGE:$VERSION
+          echo DockerHub login and Push image ${{IMAGE}}:${{VERSION}}
           #echo ${{secrets.DOCKERHUB_PWD}} | docker login -u ${{secrets.DOCKERHUB_USERID}} $DOCKERHUB_URL --password-stdin   
           echo ${{secrets.DOCKERHUB_PWD}} | docker login -u ${{secrets.DOCKERHUB_USERID}} --password-stdin   
           docker image tag $IMAGE:0 $REPO/$IMAGE:$VERSION
