read configf from file in container

--- a/examples/node webapp/Dockerfile
+++ b/examples/node webapp/Dockerfile
@@ -5,5 +5,8 @@ WORKDIR /app
 COPY . . 
 RUN yarn install
 
+# not required, it's only an indication for who use the Dockerfile
+#EXPOSE 3000 
+
 # CMD ["node", "app.js"]
 ENTRYPOINT ["node", "app.js"]
