--- a/.github/workflows/deploy node webapp 1.yml
+++ b/.github/workflows/deploy node webapp 1.yml
@@ -23,7 +23,7 @@ jobs:
           docker image build -t $IMAGE:0 -f "devops/Dockerfile.3" .
           echo ---
           
-          #echo TODO echo docker.pkg.github.com
+          #echo "### docker.pkg.github.com"
           #echo ---
           #echo Docker login and Push
           #echo ${{secrets.DOCKERHUB_PWD}} | docker login -u ${{secrets.DOCKERHUB_USERID}} --password-stdin
@@ -31,7 +31,7 @@ jobs:
           #docker image push ${{secrets.DOCKERHUB_USERID}}/$REPO:latest
           #echo ---
           
-          echo Canister login and Push
+          echo "### Canister login and Push"
           echo ${{secrets.CANISTER_PWD}} | docker login -u ${{secrets.CANISTER_USERID}} $CANISTER_URL --password-stdin   
           docker image tag $IMAGE:0 $CANISTER_URL/${{secrets.CANISTER_USERID}}/$IMAGE:$VERSION
           docker image tag $IMAGE:0 $CANISTER_URL/${{secrets.CANISTER_USERID}}/$IMAGE:latest                 
@@ -40,7 +40,7 @@ jobs:
           docker image pull $CANISTER_URL/${{secrets.CANISTER_USERID}}/$IMAGE:latest
           echo ---
           
-          echo Container Registry Login and Push
+          echo "### Container Registry (c8n.io) login and Push"
           echo ${{secrets.CR_PWD}} | docker login -u ${{secrets.CR_USERID}} $CR_URL --password-stdin          
           docker image tag $IMAGE:0 $CR_URL/${{secrets.CR_USERID}}/$IMAGE:$VERSION
           docker image tag $IMAGE:0 $CR_URL/${{secrets.CR_USERID}}/$IMAGE:latest          
