--- a/.github/workflows/deploy api-service test image.yml
+++ b/.github/workflows/deploy api-service test image.yml
@@ -38,7 +38,7 @@ jobs:
           #echo ${{secrets.AWS_DEVOP_ACCESS_SECRET}} | docker login -u ${{secrets.AWS_DEVOP_ACCESS_KEY}} ${{secrets.AWS_ECR_URI}} --password-stdin  
           #echo ${{secrets.AWS_DEVOP_PASSWORD}} | docker login -u ${{secrets.AWS_DEVOP_USERNAME}} ${{secrets.AWS_ECR_URI}} --password-stdin
           #password=$(aws ecr get-login --no-include-email --region eu-central-1 --profile ${{secrets.AWS_DEVOP_USERNAME}})
-          password=$(aws ecr get-login-password --no-include-email --region eu-central-1 --profile ${{secrets.AWS_DEVOP_USERNAME}})
+          password=$(aws ecr get-login-password --region eu-central-1 --profile ${{secrets.AWS_DEVOP_USERNAME}})
           echo $password | docker login -u ${{secrets.AWS_DEVOP_USERNAME}} ${{secrets.AWS_ECR_URI}} --password-stdin
           docker image tag $IMAGE:0 $REPO/$IMAGE:$VERSION
           docker image tag $IMAGE:0 $REPO/$IMAGE:latest
