--- a/.github/workflows/deploy api-service test image.yml
+++ b/.github/workflows/deploy api-service test image.yml
@@ -44,8 +44,8 @@ jobs:
           #password=$(aws ecr get-login --no-include-email --region eu-central-1 --profile ${{secrets.AWS_DEVOP_USERNAME}})
           #password=$(aws ecr get-login-password --region eu-central-1 --profile devop
           # login using environment variables
-          password=$(aws ecr get-login-password --region eu-central-1
-          echo $password | docker login -u ${{secrets.AWS_DEVOP_USERNAME}} ${{secrets.AWS_ECR_URI}} --password-stdin
+          password=$(aws ecr get-login-password
+          echo $password | docker login -u AWS ${{secrets.AWS_ECR_URI}} --password-stdin
           docker image tag $IMAGE:0 $REPO/$IMAGE:$VERSION
           docker image tag $IMAGE:0 $REPO/$IMAGE:latest
           docker image push $REPO/$IMAGE:$VERSION 
