--- a/.github/workflows/deploy api-service test image.yml
+++ b/.github/workflows/deploy api-service test image.yml
@@ -44,7 +44,7 @@ jobs:
           #password=$(aws ecr get-login --no-include-email --region eu-central-1 --profile ${{secrets.AWS_DEVOP_USERNAME}})
           #password=$(aws ecr get-login-password --region eu-central-1 --profile devop
           # login using environment variables
-          password=$(aws ecr get-login-password
+          password=$(aws ecr get-login-password)
           echo $password | docker login -u AWS ${{secrets.AWS_ECR_URI}} --password-stdin
           docker image tag $IMAGE:0 $REPO/$IMAGE:$VERSION
           docker image tag $IMAGE:0 $REPO/$IMAGE:latest
